# weekly-business-signal-brief

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HOW_IT_WORKS.md  LICENSE  Makefile  PROJECT_BRIEF.md  README.md  TASKS.md  docker-compose.yml  iteration-4-tasks.md  iteration-5-summary.md  iteration-5-tasks.md  iteration-6-tasks.md  project-iterations.md  prompt-task-2.md  pyproject.toml  review-prompt-template.md  task-prompt-template.md  todolist.md
.github/workflows/: claude-code-review.yml  claude.yml  codex-review.yml  security.yml
config/: delivery.yaml  rules.yaml
docs/: README.md
docs/deployment/: security.md
docs/iterations/: Iteration-2-Tasks.md  iteration-3-tasks.md  iteration-5-tasks.md  iteration-6-tasks.md
docs/project/: HOW_IT_WORKS.md  TASKS.md  (+2 more)
examples/: sample_weekly.csv
tests/: test_delivery_alerts.py  test_delivery_config.py  test_delivery_orchestrator.py  test_delivery_slack.py  test_delivery_teams.py  test_delta.py  test_e2e_pipeline.py  test_eval_artifact.py  test_eval_extractor.py  test_eval_runner.py  test_eval_scorer.py  test_export_write.py  test_export_write_failures.py  test_feedback.py  test_feedback_auth.py  test_feedback_ratelimit.py  test_feedback_server.py  test_findings_schema.py  test_history.py  test_llm_adapter.py  test_llm_integration.py  test_metrics.py  test_missing_week.py  test_observability.py  test_pipeline_history.py  test_registry.py  test_render_context.py  test_render_template.py  test_rules.py  test_scheduler.py  test_schema_validation_ints.py  test_security_hardening.py  test_trends.py
(+155 files in other folders)
