[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wbsb"
version = "0.1.0"
description = "Deterministic Weekly Business Signal Brief engine"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.7",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
wbsb = "wbsb.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
